trunk/Archive2/cc/4d2dad85143158/output
main.cpp: In member function 'void Derived<T>::bar()':
main.cpp:8:18: error: 'foo' was not declared in this scope
     void bar() { foo = 0; }
                  ^
